CHATS_SIT/force-app/main/default/objects/T_APPLN_DDTN__c.object
<CustomObject>
    <description>Information about the child support deductions for a case</description>
    <fields>
        <fullName>AMT_DDTN_TOTAL__c</fullName>
        <description>AMT_DDTN_TOTAL</description>
        <label>AMT_DDTN_TOTAL</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_FREQ_PAID__c</fullName>
        <description>CDE_FREQ_PAID</description>
        <label>CDE_FREQ_PAID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>DTE_BEGIN_EFFV</description>
        <label>DTE_BEGIN_EFFV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_DDTN__c</fullName>
        <label>IDN_APPLN_DDTN</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Child Support Deductions</relationshipLabel>
        <relationshipName>Application_Child_Support_Deductions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NAM_PAYEE__c</fullName>
        <description>NAM_PAYEE</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NAM_PAYEE</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NBR_DOCKET__c</fullName>
        <description>NBR_DOCKET</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>NBR_DOCKET</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Application Child Support Deduction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACSD-{0}</displayFormat>
        <label>Application Child Support Deduction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Child Support Deductions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>